# trivialmessage

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/trivialmessage/: common.py  fastmail.py  gmail.py  imap.py  outlook.py  protonmail.py  slack.py  smtp.py  whatsapp.py
